# vnpy

./: .gitignore  pyproject.toml
market_research/: .gitignore  README.md  builder.py  chat_worker.py  cli.py  pyproject.toml  server.py
market_research/compute/: calendar.py  concept_cluster.py  ind_fundflow.py  limitup.py  overview.py
market_research/report/: index.html
market_research/report/static/: app.js  style.css
market_research/report/templates/: index.html
market_research/simulator/: __init__.py  data_downloader.py  db_writer.py  engine.py  models.py  strategy_base.py
market_research/src/market_research/: __init__.py
market_research/src/market_research/compute/: __init__.py  _stats.py  limitup.py
market_research/src/market_research/report/: __init__.py
market_research/strategies/: __init__.py  example_ma_cross.py
market_research/tests/: __init__.py  test_compute.py  test_smoke.py  test_stats.py
market_research/update_manager/: __init__.py  __main__.py  cli.py  cron.py  updater.py
tbot/: pyproject.toml
tbot/report/: index.html
tbot/report/pages/: industry.js  limitup.js
tbot/report/static/: shared.js
tbot/scripts/: migrate_to_duckdb.py
tbot/tbot/: main.py  report_builder.py
tbot/tbot/api/: app.py
tbot/tbot/business/chat/: ws_handler.py
tbot/tbot/business/concept_cluster/: __init__.py  router.py  service.py
tbot/tbot/business/data_update/: __init__.py  (+5 more)
tbot/tbot/config/: base.yaml  constants.py  development.yaml  settings.py
tbot/tbot/ui/: README.md  index.html
tbot/tbot/utils/: logger.py
tbot/ui/pages/: chat.js
(+48 files in other folders)
