[project]
name = "tbot"
version = "0.1.0"
description = "TBot — 量化投研工具（基于 vnpy + DuckDB）"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "duckdb>=1.3.0",
    "tushare>=1.4.0",
    "pyyaml>=6.0",
    "httpx>=0.28.1",
]

[project.scripts]
tbot = "tbot.main:main"

[tool.setuptools.packages.find]
include = ["tbot", "tbot.*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
